@@ -4,6 +4,7 @@ Changes in openair 0.5-12 [2011-10-10]
 *       do not clip polarPlot concentrations unless upper is supplied
 *       new option 'intervals' for percentileRose
 *       add min.bin option to polarAnnulus
+*       add Index of Agreement to modStats
 
 Changes in openair 0.5-11 [2011-09-14]
 =====================================
